# Dioxus

./: README.md  migrazione-home.html-dioxus  progetto-completo.txt  rust-dioxus-axum.txt  tutto-da-gemini.txt  ultime-da-chatgpt-dioxus.txt
casabaldini/: Cargo.toml
casabaldini_gpt/: Cargo.toml  Dioxus.toml  dioxus.toml
casabaldini_gpt/backend/: Cargo.toml  casabaldini.sqlite
casabaldini_gpt/backend/src/: api.rs  main.rs
casabaldini_gpt/frontend/: Cargo.toml
casabaldini_gpt/frontend/src/: app.rs  home.rs
casabaldini_gpt/shared/: Cargo.toml
casabaldini_gpt/shared/src/: lib.rs
casabaldini_gpt/static/home/: slider-init.js
desk/: Cargo.toml  Dioxus.toml
stefanocatani/: Cargo.toml  Dioxus.toml
